--- a/provisioning/roles/setup/tasks/docker.yml
+++ b/provisioning/roles/setup/tasks/docker.yml
@@ -29,7 +29,7 @@
 # sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable"
 - name: Set up the stable repository
   apt_repository:
-    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable
+    repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -sc) stable
     state: present
     update_cache: yes
   tags:
