--- a/provisioning/roles/app/tasks/main.yml
+++ b/provisioning/roles/app/tasks/main.yml
@@ -1,7 +1,7 @@
----
+# ---
     # This playbook contains all actions that will be run on "local" host.
      
-    # cp ~/application/provisioning/../docker/* /tmp/helloworld
+    # cp ~/application/provisioning/../docker/* /tmp/flask-app
     - name: Copy "docker" application folder across
       copy:
         src: "{{ playbook_dir }}/../docker/"
@@ -9,7 +9,7 @@
       tags:
         - app
      
-    # cd /tmp/helloworld/ && docker-compose up -d --build
+    # # cd /tmp/flask-app/ && docker-compose up -d --build
     - name: Rebuild images defined in compose file and restart containers whose images have changed
       command: docker-compose up -d --build
       args:
